--- a/design.css
+++ b/design.css
@@ -1,11 +1,17 @@
-#ballong{
-    font-size: 40px;
+#flex-container{
     height: 100vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
-*{
-    background-color: hsl(193, 75%, 11%);
+.dice{
+    width: 15%;
+    height: 15%;
+}
+
+button{
+    width: 40%;
+    height: 20%;
+    background-color: mediumaquamarine;
 }
